# kafkax

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/superpowers/plans/: 2026-03-20-performance-optimization.md  2026-03-23-topic-management.md
docs/superpowers/specs/: 2026-03-20-performance-design.md  2026-03-20-search-scope-toggle-design.md  2026-03-23-topic-management-design.md
src/: app.rs  desktop.rs  lib.rs  main.rs  message.rs  theme.rs
src/codec/: avro.rs  encoding.rs  json.rs  mod.rs  msgpack.rs  plugin.rs  protobuf.rs
src/config/: connection_config.rs  mod.rs
src/kafka/: admin.rs  connection.rs  consumer.rs  metadata.rs  mod.rs  producer.rs  types.rs
src/state/: app_state.rs  mod.rs  overlay_state.rs  sidebar_state.rs  table_state.rs
src/ui/: connection_dialog.rs  context_menu.rs  message_detail.rs  message_table.rs  mod.rs  send_message_dialog.rs  sidebar.rs  status_bar.rs  syntax.rs  toolbar.rs  topic_config_dialog.rs
tests/: codec_tests.rs
